Refactor
Refactored multiple classes to use final fields, records, and updated method names for consistency (e.g., getInputs() to inputs()). Improved usage of collections with new List methods (getFirst(), getLast(), removeFirst(), removeLast()) and replaced manual index-based access. Enhanced code readability and safety by enforcing immutability and modern Java features across AI, neural network, game, and utility classes.